--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -33,6 +33,7 @@
     "rules": {
         "import/prefer-default-export": "off",
         "react/react-in-jsx-scope": "off",
+        "@typescript-eslint/no-explicit-any": "off",
         "react/jsx-props-no-spreading": "off",
         "prettier/prettier": [
             "warn",
