--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.5",
-    "tau-prolog": "^0.3.2"
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
